feat: start simiulator then run android

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-native start",
-    "android:dev": "$ANDROID_HOME/emulator/emulator -avd Nexus_5x_API_28_x86 -netdelay none -netspeed full & react-native run-android",
+    "android:dev": "$ANDROID_HOME/emulator/emulator -avd Nexus_5x_API_28_x86 -netdelay none -netspeed full > /dev/null | react-native run-android",
     "test": "jest",
     "lint": "eslint ."
   },
