--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,6 +28,8 @@ target 'workoutApp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'workoutAppTests' do
     inherit! :search_paths
     # Pods for testing
