--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "16.8.6",
     "react-native": "0.60.0",
     "react-native-material-ui": "^1.30.1",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
