--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
     "@babel/core": "^7.5.0",
     "@babel/runtime": "^7.5.1",
     "@react-native-community/eslint-config": "^0.0.5",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^24.8.0",
-    "eslint": "^6.0.1",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-react": "^7.16.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
     "react-test-renderer": "16.8.6"
