--- a/package.json
+++ b/package.json
@@ -41,12 +41,22 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "husky": ">=4",
     "jest-expo": "~38.0.0",
+    "lint-staged": ">=10",
     "prettier": "2.0.5",
     "typescript": "~3.9.5"
   },
   "jest": {
     "preset": "react-native"
   },
-  "private": true
+  "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
+  }
 }
