--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
+    "android:start-emulator": "emulator -list-avds | (read simulator; emulator -avd ${simulator} -logcat *:e)",
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx,.json",
+    "lint-and-fix": "eslint . --ext .ts,.tsx,.js,.jsx,.json --quiet --fix",
     "test": "jest"
   },
   "dependencies": {
@@ -25,26 +28,26 @@
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-unimodules": "~0.10.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.23",
+    "@types/react": "^16.9.46",
     "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.61.23",
+    "@types/react-native": "^0.62.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/parser": "^3.9.0",
     "babel-preset-expo": "~8.2.0",
     "eslint": "^7.7.0",
-    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.0.8",
     "husky": ">=4",
     "jest-expo": "~38.0.0",
     "lint-staged": ">=10",
-    "prettier": "2.0.5",
+    "prettier": "^2.0.5",
     "typescript": "~3.9.5"
   },
   "jest": {
@@ -57,6 +60,6 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
   }
 }
