--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx,.json",
-    "lint-and-fix": "eslint . --ext .ts,.tsx,.js,.jsx,.json --quiet --fix",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint-and-fix": "eslint . --ext .ts,.tsx,.js,.jsx --quiet --fix",
     "test": "jest"
   },
   "dependencies": {
@@ -36,14 +36,18 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "^0.62.0",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.9.0",
     "babel-preset-expo": "~8.2.0",
     "eslint": "^7.7.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react": "^1.1.7",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "husky": ">=4",
     "jest-expo": "~38.0.0",
     "lint-staged": ">=10",
