feat: get tab navigator working

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "android:start-emulator": "emulator -list-avds | (read simulator; emulator -avd ${simulator} -logcat *:e)",
     "ios": "react-native run-ios",
     "web": "expo start --web",
+    "dev": "expo start",
     "start": "react-native start",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint-and-fix": "eslint . --ext .ts,.tsx,.js,.jsx --quiet --fix",
@@ -15,7 +16,9 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@types/styled-components": "^5.1.2",
     "expo": "~38.0.9",
+    "expo-constants": "^9.1.1",
     "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.0",
     "expo-updates": "~0.2.8",
